--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,29 @@
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #e5e5e5;
+  background-color: #ffffff;
+}
+
+/* Global */
+
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+
+/* Logo */
+
+.logo {
+  font-family: 'Raleway', sans-serif;
+  color: #000000;
+}
+.logo > span {
+  color: #2196f3;
+}
+
+/* Footer */
+
+footer {
+  background-color: #2f303a;
 }
