--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #ffffff;
+  color: #000000;
 }
 
 /* Global */
@@ -14,16 +15,23 @@ ul {
 
 /* Logo */
 
-.logo {
+.header-logo {
   font-family: 'Raleway', sans-serif;
   color: #000000;
 }
-.logo > span {
+.header-logo > span {
   color: #2196f3;
 }
 
 /* Footer */
 
-footer {
+.footer {
   background-color: #2f303a;
+}
+.footer-logo {
+  font-family: 'Raleway', sans-serif;
+  color: #ffffff;
+}
+.footer-logo > span {
+  color: #2196f3;
 }
