--- a/css/styles.css
+++ b/css/styles.css
@@ -28,29 +28,33 @@ ul {
 
 .logo {
   font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   color: #000000;
 }
-.logo > span {
+.logo-mod-color {
   color: var(--accent-color);
 }
 
-.site-nav .link,
-.contacts .link {
+.site-nav-link,
+.contacts-link {
   color: var(--main-content-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-link:hover,
+.site-nav-link:focus {
   color: var(--accent-color);
 }
-.contacts .link {
+.contacts-link {
   color: var(--second-content-text-color);
 }
-.contacts .link:hover,
-.contacts .link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: var(--accent-color);
 }
 
@@ -59,7 +63,7 @@ ul {
 .hero {
   background-color: var(--second-background-color);
 }
-.hero h1 {
+.hero-title {
   color: var(--main-background-color);
   text-transform: uppercase;
   font-size: 44px;
@@ -76,28 +80,36 @@ ul {
   line-height: 1.88;
   letter-spacing: 0.06em;
   cursor: pointer;
-  }
-section h2 {
-  font-style: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
 }
 
 /* Advantages section */
 
-.advantages-section {
+
+.advantages-section-title {
   font-size: 14px;
-  line-height: 1.14;
+  font-weight: 700;
+  line-height: 1.17;
   text-align: left;
   letter-spacing: 0.03em;
-}
-.advantages-section h3 {
   text-transform: uppercase;
 }
-.advantages-section p {
+.advantages-section-text {
   color: var(--second-content-text-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.71;
+  text-align: left;
+  letter-spacing: 0.03em;
+
+}
+
+/* What we do section */
+
+.works-section-title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* Our team section */
@@ -105,32 +117,36 @@ section h2 {
 .our-team-section {
   background-color: var(--third-background-color);
 }
-.our-team-section li {
+.our-team-section-list-item {
   background-color: var(--main-background-color);
   width: 270px;
 }
-.our-team-section h3,
-.our-team-section p {
+.our-team-member-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
 }
-.our-team-section p {
+.our-team-member-position {
   color: var(--second-content-text-color);
   font-weight: 400;
+  font-size: 16px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
 }
 
-/* Footer (подумать над цветом лого-сделать изящнее) */
+/* Footer */
 
-footer {
+.footer {
   background-color: var(--second-background-color);
 }
-.logo.footer {
+.logo.bottom {
   color: var(--main-background-color);
 }
-.address .link {
+.adress-contacts-link,
+.adress-location {
   color: var(--main-background-color);
   font-style: normal;
   font-weight: 400;
@@ -138,11 +154,11 @@ footer {
   line-height: 1.46;
   letter-spacing: 0.03em;
 }
-.address .contacts:hover,
-.address .contacts:focus {
+.adress-contacts-link:hover,
+.adress-contacts-link:focus {
   color: var(--accent-color);
 }
-.address .contacts {
+.adress-contacts-link {
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -165,20 +181,23 @@ footer {
   color: var(--main-background-color);
 }
 
-/* Our works */
+/* Our projects */
 
-.our-projects-list h3,
-.our-projects-list p {
-  font-weight: 500;
+.project-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  text-align: left;
+}
+.project-type {
+  color: var(--second-content-text-color);
+  font-weight: 400;
   font-size: 16px;
-  line-height: 1.17;
+  line-height: 1.88;
   letter-spacing: 0.03em;
   text-align: left;
 }
-.our-projects-list p {
-  color: var(--second-content-text-color);
-  font-weight: 400;
-}
-.our-projects-list li {
+.our-projects-list-item {
   width: 370px;
 }
